Shapekeys not targeting the right vertex position with Subdiv #80873

Closed
opened 2020-09-17 11:04:54 +02:00 by Julien Kaspar · 13 comments
Member

System Information
Operating system: Linux-5.4.0-47-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-17 05:34, hash: f085ebba58

Short description of error
When sculpting on a shapekey it works just fine but if a subdivision surface modifier is used (or Multires with the "Scultp Base Mesh" option used) it won't work.
Instead of targeting the vertex positions of the shapekey it will always go for the base shape.

Screenshot_2020-09-17_11-00-00.png

Exact steps for others to reproduce the error

  • Create an object and add a base and Key 1 shapekey
  • Change the value for "key 1" to 1
  • Add a subdiv modifier and subdivide
  • Enter sculpt mode and disable the "Use Deform only" option in the header
  • Try sculpting the shapekey
  • Enable the Grab Active Vertex option in the Grab brush to see the targeted wires more clearly
**System Information** Operating system: Linux-5.4.0-47-generic-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-17 05:34, hash: `f085ebba58` **Short description of error** When sculpting on a shapekey it works just fine but if a subdivision surface modifier is used (or Multires with the "Scultp Base Mesh" option used) it won't work. Instead of targeting the vertex positions of the shapekey it will always go for the base shape. ![Screenshot_2020-09-17_11-00-00.png](https://archive.blender.org/developer/F8891729/Screenshot_2020-09-17_11-00-00.png) **Exact steps for others to reproduce the error** - Create an object and add a base and Key 1 shapekey - Change the value for "key 1" to 1 - Add a subdiv modifier and subdivide - Enter sculpt mode and disable the "Use Deform only" option in the header - Try sculpting the shapekey - Enable the Grab Active Vertex option in the Grab brush to see the targeted wires more clearly
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar
Author
Member

Added subscriber: @PabloDobarro

Added subscriber: @PabloDobarro

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Author
Member

Added subscriber: @Sergey

Added subscriber: @Sergey
Author
Member

@PabloDobarro @Sergey Since this fix is needed very soon for production it makes sense to push up the priority.

@PabloDobarro @Sergey Since this fix is needed very soon for production it makes sense to push up the priority.
Member

Is the solution in the patch ok?

Is the solution in the patch ok?
Author
Member

@PabloDobarro I tested it and it seems to work fine (like 2.83 with the shrunken cage) when used with a subd modifier or when using the multires on level 0.
With the option "Sculpt Base Mesh" it's still broken but that could be fixed at another point?

@PabloDobarro I tested it and it seems to work fine (like 2.83 with the shrunken cage) when used with a subd modifier or when using the multires on level 0. With the option "Sculpt Base Mesh" it's still broken but that could be fixed at another point?
Member

I think the sculpt base mesh option is a separate issue. What you are trying to do using the sculpt base mesh feature is something that could be done with a refit/apply base for the modifier?

I think the sculpt base mesh option is a separate issue. What you are trying to do using the sculpt base mesh feature is something that could be done with a refit/apply base for the modifier?

In #80873#1024746, @PabloDobarro wrote:
Is the solution in the patch ok?

Address the inlined comment in the code and the patch is fine.
Also don't forget that the corazyspace fix from the discussion in the patch is to be finished.

> In #80873#1024746, @PabloDobarro wrote: > Is the solution in the patch ok? Address the inlined comment in the code and the patch is fine. Also don't forget that the corazyspace fix from the discussion in the patch is to be finished.
Author
Member

In #80873#1024920, @PabloDobarro wrote:
I think the sculpt base mesh option is a separate issue. What you are trying to do using the sculpt base mesh feature is something that could be done with a refit/apply base for the modifier?

@PabloDobarro I don't think that makes sense for what this fix is for. Just to explain what I am using them for usually:
I am mainly using it to create various expression tests in a non destructive way like these:
https://cloud.blender.org/p/stylized-character-workflow/5d4a99d97b4f5e512c939903

The workflow I am using this for is explained in more detail in this video:
https://cloud.blender.org/p/stylized-character-workflow/5da05942e2e7bac4cc81bd5a

But Essentially: To create various expression test sculptings I am roughly retopologizing a sculpt and re-projecting all of the missing details onto a multires modifier with a shrinkwrap modifier.
Afterwards I start modeling & sculpting shapekeys on the base resolution for various deformations like open eyes, closed mouth, and many expressions. These I can then mix & blend in a non destructive way to create lots of expression sculpts quickly & experiment or polish away any design issues on all expressions at the same time.

The main issue right now is that I can only sculpt on the shapekeys if I disable any multires or subd modifiers completely. This adds a lot of toggling to see the subdivided result. If the "Sculpt Base Mesh" option would work properly with shapekeys, the workflow would be most efficient because any changes on the base resolution can be immediately visible in sculpt mode without switching to object mode all the time..

I could also sculpt these expressions in a destructive way without shapekeys but then once anything needs to be changed on a base level like eye size or face proportions I would have to do it for every single expression separately again & again.
Shapekeys of course aren't the best way of working like that because of performance issues and missing multires layer support but they are the only feature we have to do this right now.

> In #80873#1024920, @PabloDobarro wrote: > I think the sculpt base mesh option is a separate issue. What you are trying to do using the sculpt base mesh feature is something that could be done with a refit/apply base for the modifier? @PabloDobarro I don't think that makes sense for what this fix is for. Just to explain what I am using them for usually: I am mainly using it to create various expression tests in a non destructive way like these: https://cloud.blender.org/p/stylized-character-workflow/5d4a99d97b4f5e512c939903 The workflow I am using this for is explained in more detail in this video: https://cloud.blender.org/p/stylized-character-workflow/5da05942e2e7bac4cc81bd5a But Essentially: To create various expression test sculptings I am roughly retopologizing a sculpt and re-projecting all of the missing details onto a multires modifier with a shrinkwrap modifier. Afterwards I start modeling & sculpting shapekeys on the base resolution for various deformations like open eyes, closed mouth, and many expressions. These I can then mix & blend in a non destructive way to create lots of expression sculpts quickly & experiment or polish away any design issues on all expressions at the same time. The main issue right now is that I can only sculpt on the shapekeys if I disable any multires or subd modifiers completely. This adds a lot of toggling to see the subdivided result. If the "Sculpt Base Mesh" option would work properly with shapekeys, the workflow would be most efficient because any changes on the base resolution can be immediately visible in sculpt mode without switching to object mode all the time.. I could also sculpt these expressions in a destructive way without shapekeys but then once anything needs to be changed on a base level like eye size or face proportions I would have to do it for every single expression separately again & again. Shapekeys of course aren't the best way of working like that because of performance issues and missing multires layer support but they are the only feature we have to do this right now.

This issue was referenced by b6f15d5d47

This issue was referenced by b6f15d5d47bfdc1b24d5b17e46bac280d8b9a63d
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Pablo Dobarro self-assigned this 2020-10-01 19:25:16 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80873
No description provided.